# uba-aed1

./: .gitignore  README.md
Laboratorios/Labo4/: CMakeLists.txt  main.cpp  vectores.cpp
Laboratorios/Labo7/: CmakeLists.txt  cases.cpp  ejercicios.cpp  main.cpp
Laboratorios/Labo8/: CMakeLists.txt  Labo8
Laboratorios/Labo8/src/: ejercicios.cpp  ejercicios.h  risas.cpp
Laboratorios/Labo8/tests/: tests.cpp
Laboratorios/Labo9/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  graficar.py  main.cpp
Parciales/AED1-P1-2020-10-21/: Ejercicio1.slspec  Ejercicio2.slspec  Ejercicio3.slspec
Parciales/AED1-P1-2020-11-27/: Ejercicio1.slspec
Parciales/AED1-P1-2021-05-19/: Ejercicio1.slspec  Ejercicio2.slspec  Ejercicio3.slspec  Ejercicio4.slspec
Parciales/AED1-P1-2021-06-28/: Ejercicio1.slspec  Ejercicio2.slspec  Ejercicio3.slspec  Ejercicio4.slspec
Parciales/AED1-P2-2018-11-23/: CMakeLists.txt
Parciales/AED1-P2-2018-11-23/src/: cerearYSumar.cpp  cuboDeUnos.cpp  ordenarMitad.cpp
Parciales/AED1-P2-2018-11-23/tests/: cerearYSumarTEST.cpp  cuboDeUnosTEST.cpp  ordenarMitadTEST.cpp
Parciales/AED1-P2-2021-06-23/: CMakeLists.txt
Parciales/AED1-P2-2021-11-19/: CMakeLists.txt
Parciales/AED1-P2-2021-11-19/src/: auxiliares.cpp  auxiliares.h  ej1.cpp  ej2.cpp  ej3.cpp  ej4.cpp  ejercicio1.cpp  ejercicio1.h  ejercicio2.cpp  ejercicio2.h  ejercicio3.cpp  ejercicio3.h  ejercicio4.cpp  ejercicio4.h  ejercicio5.cpp  ejercicio5.h  ejercicio6.cpp  ejercicio6.h
Parciales/AED1-P2-2021-11-19/tests/: ej1_test.cpp  ej2_test.cpp  ej3_test.cpp  ej4_test.cpp  ejercicio1_test.cpp  ejercicio2_test.cpp  ejercicio3_test.cpp  ejercicio4_test.cpp  ejercicio5_test.cpp  ejercicio6_test.cpp
Prácticas/Soluciones/: Algo1Macros.tex  Base.tex  Práctica3.tex  Práctica5-Ejercicio5.slspec  Práctica5-Ejercicio6.slspec  caratula.sty
Soluciones/: Práctica3.tex
TPs/TPE/: Algo1Macros.tex  TPE.tex
TPs/TPI/: CMakeLists.txt  Funciones_TPI.cpp  Funciones_TPI.h  README.md  auxiliares.cpp  auxiliares.h  definiciones.h  ejercicios.cpp  (+2 more)
TPs/TPI/template-alumnos/: CMakeLists.txt  Funciones_TPI.cpp  Funciones_TPI.h  auxiliares.cpp  auxiliares.h  definiciones.h  ejercicios.cpp  ejercicios.h
TPs/TPI/template-alumnos/datos/: eph_3c_2018.th  eph_3c_2018.ti  eph_3c_2018_100.th  eph_3c_2018_100.ti  eph_3c_2018_1000.th  eph_3c_2018_1000.ti  eph_3c_2020.th  eph_3c_2020.ti  eph_3c_2020_100.th  eph_3c_2020_100.ti  eph_3c_2020_1000.th  eph_3c_2020_1000.ti
TPs/TPI/template-alumnos/test/: corregirRegionTEST.cpp  costoSubsidioMejoraTEST.cpp  creceElTeleworkingEnCiudadesGrandesTEST.cpp  esEncuestaValidaTEST.cpp  generarJoinTEST.cpp  histHabitacionalTEST.cpp  histogramaDeAnillosConcentricosTEST.cpp  laCasaEstaQuedandoChicaTEST.cpp  muestraHomogeneaTEST.cpp  ordenarRegionYCODUSUTEST.cpp  quitarIndividuosTEST.cpp
(+50 files in other folders)
